# just-agent

./: .env.example  AGENTS.md  Cargo.toml  README.md
crates/just-agent/: Cargo.toml
crates/just-agent-client/: Cargo.toml
crates/just-agent-client/src/: client.rs  lib.rs  types.rs
crates/just-agent-common/: Cargo.toml
crates/just-agent-common/src/: command.rs  context.rs  lib.rs  protocol.rs  retry.rs  types.rs
crates/just-agent-common/src/protocol/: agent.rs  mod.rs  sse.rs
crates/just-agent-core/: Cargo.toml
crates/just-agent-core/src/: command.rs  config.rs  deferred.rs  lib.rs  persistence.rs  retry.rs  runner.rs  session.rs  types.rs
crates/just-agent-daemon/: Cargo.toml
crates/just-agent-daemon/src/: auth.rs  bridge.rs  error.rs  main.rs  shutdown.rs  skill_promote.rs  sse.rs  state.rs  test_helpers.rs
crates/just-agent-run/: Cargo.toml
crates/just-agent-run/src/: main.rs
crates/just-agent-runtime/: Cargo.toml
crates/just-agent-runtime/src/: agent_task.rs  approval.rs  config.rs  deferred.rs  event.rs  history.rs  lib.rs  persistence.rs  retry.rs  runner.rs  session.rs
crates/just-agent-tui/: Cargo.toml
crates/just-agent-tui/src/: args.rs  command.rs  main.rs  session.rs  stdio.rs
crates/just-agent-tui/src/tui/: mod.rs  (+5 more)
crates/just-agent/src/: args.rs  main.rs
docs/: architecture.md  context-management.md  env-reference.md  headless-cli.md
docs/reference/: daemon-api.md  env.md  headless-cli.md  just-agent-run.md  just-agent.md
harbor-integration/: README.md
harbor-integration/just_agent_harbor/: adapter.py
nix/: common.nix
(+30 files in other folders)
